--- a/layouts/partials/social-meta.html
+++ b/layouts/partials/social-meta.html
@@ -30,9 +30,46 @@
 <meta property="og:video" content="https://www.youtube.com/watch?v={{ .Params.youtube_id }}">
 <meta property="og:video:type" content="text/html">
 {{ end }}
+
+<!-- Article dates -->
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+{{ if ne .Date .Lastmod }}
+<meta property="article:modified_time" content="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+{{ end }}
+
+<!-- Article tags -->
 {{ if .Params.tags }}
 {{ range .Params.tags }}
 <meta property="article:tag" content="{{ . }}">
 {{ end }}
 {{ end }}
+
+<!-- JSON-LD structured data for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "PodcastEpisode",
+  "headline": "{{ .Title }}",
+  "description": "{{ .Params.description | default .Site.Params.description }}",
+  "datePublished": "{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}",
+  {{ if ne .Date .Lastmod }}
+  "dateModified": "{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}",
+  {{ end }}
+  "url": "{{ .Permalink }}",
+  {{ if .Params.og_landscape }}
+  "image": "{{ .Site.BaseURL | strings.TrimSuffix "/" }}{{ .Params.og_landscape }}",
+  {{ end }}
+  "author": {
+    "@type": "Organization",
+    "name": "{{ .Site.Title }}"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "{{ .Site.Title }}",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "{{ .Site.BaseURL }}img/png/favicon.png"
+    }
+  }
+}
+</script>
