Fix casing for "Patoarchitekci" in multiple files and ensure consistent title formatting in newsletter

--- a/layouts/partials/seo-meta.html
+++ b/layouts/partials/seo-meta.html
@@ -3,7 +3,7 @@
 {{ if .Params.seo_keywords }}
 <meta name="keywords" content="{{ .Params.seo_keywords }}">
 {{ end }}
-<meta name="author" content="{{ .Site.Params.author | default "PatoArchitekci" }}">
+<meta name="author" content="{{ .Site.Params.author | default "Patoarchitekci" }}">
 
 <!-- Canonical URL -->
 <link rel="canonical" href="{{ .Permalink }}">
