--- a/layouts/index.newsletter-rss.xml
+++ b/layouts/index.newsletter-rss.xml
@@ -13,7 +13,7 @@
     xmlns:content="http://purl.org/rss/1.0/modules/content/">
     
   <channel>
-    <title>PatoArchitekci Summer Newsletter Mail 🌞🏖️</title>
+    <title>Patoarchitekci Summer Newsletter Mail 🌞🏖️</title>
     <description>Wakacyjny newsletter z ciekawymi linkami od Łukasza i Szymona</description>
     <link>{{ .Site.BaseURL }}/newsletter</link>
     <atom:link href="{{ .Site.BaseURL }}/newsletter.xml" rel="self" type="application/rss+xml" />
