Add date formatting for MailerLite and update subscriber data handling in training waitlist

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
       class="absolute end-0 top-[45%] md:top-[27%] max-w-[41px] sm:max-w-[45px] md:max-w-[70px] xl:max-w-[303px] pointer-events-none min-[2800px]:!right-[clamp(40px,39vw,27%)] min-[4000px]:!right-[clamp(40px,39vw,35%)]" />
     <div class="max-w-[1219px] mx-auto flex flex-wrap justify-between gap-6 max-xl:px-[30px] py-[50px] sm:py-[48.5px]">
       {{ if .Site.Params.social.linkedin }}
-      <a href="{{ .Site.Params.social.linkedin }}">
+      <a href="{{ .Site.Params.social.linkedin }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[20px] hover:scale-110 duration-300 transition-all ease-in-out" width="36"
           viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -16,7 +16,7 @@
       </a>
       {{ end }}
       {{ if .Site.Params.social.facebook }}
-      <a href="{{ .Site.Params.social.facebook }}">
+      <a href="{{ .Site.Params.social.facebook }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[20px] hover:scale-110 duration-300 transition-all ease-in-out" width="36"
           viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -26,7 +26,7 @@
       </a>
       {{ end }}
       {{ if .Site.Params.social.twitter }}
-      <a href="{{ .Site.Params.social.twitter }}">
+      <a href="{{ .Site.Params.social.twitter }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[22px] hover:scale-110 duration-300 transition-all ease-in-out" width="39"
           viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -36,7 +36,7 @@
       </a>
       {{ end }}
       {{ if .Site.Params.social.instagram }}
-      <a href="{{ .Site.Params.social.instagram }}">
+      <a href="{{ .Site.Params.social.instagram }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[20px] hover:scale-110 duration-300 transition-all ease-in-out" width="35"
           viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -46,7 +46,7 @@
       </a>
       {{ end }}
       {{ if .Site.Params.social.discord }}
-      <a href="{{ .Site.Params.social.discord }}">
+      <a href="{{ .Site.Params.social.discord }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[26px] hover:scale-110 duration-300 transition-all ease-in-out" width="46"
           viewBox="0 0 46 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -56,7 +56,7 @@
       </a>
       {{ end }}
       {{ if .Site.Params.social.tiktok }}
-      <a href="{{ .Site.Params.social.tiktok }}">
+      <a href="{{ .Site.Params.social.tiktok }}" class="inline-block p-3 -m-3">
         <svg class="max-sm:max-w-[17px] hover:scale-110 duration-300 transition-all ease-in-out" width="31"
           viewBox="0 0 31 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
