--- a/layouts/partials/seo-meta.html
+++ b/layouts/partials/seo-meta.html
@@ -1,7 +1,7 @@
 <!-- SEO Meta Tags -->
 <meta name="description" content="{{ .Params.description | default .Site.Params.description }}">
-{{ if .Params.seo_keywords }}
-<meta name="keywords" content="{{ .Params.seo_keywords }}">
+{{ if or .Params.keywords .Params.seo_keywords }}
+<meta name="keywords" content="{{ .Params.keywords | default .Params.seo_keywords }}">
 {{ end }}
 <meta name="author" content="{{ .Site.Params.author | default "Patoarchitekci" }}">
 
