--- a/layouts/partials/header-dark.html
+++ b/layouts/partials/header-dark.html
@@ -28,26 +28,12 @@
           </a>
           <ul id="menu-list"
             class="fixed top-0 right-0 h-full w-full bg-white transform translate-x-full transition-transform duration-300 ease-in-out flex flex-col gap-6 items-center justify-center lg:static lg:transform-none lg:flex-row lg:h-auto lg:w-auto lg:bg-transparent lg:shadow-none lg:gap-10 lg:max-w-[998px] ml-auto">
+            {{ range .Site.Menus.main }}
             <li>
               <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-4 px-8 lg:py-1.5 lg:px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="/#podcast">Gdzie słuchać</a>
+                href="{{ .URL }}"{{ with .Params.target }} target="{{ . }}"{{ end }}>{{ .Name }}</a>
             </li>
-            <li>
-              <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-4 px-8 lg:py-1.5 lg:px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="/#oh-we">O nas</a>
-            </li>
-            <li>
-              <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-4 px-8 lg:py-1.5 lg:px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="/szkolenia/">Szkolenia</a>
-            </li>
-            <li>
-              <a                class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-1.5 px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="{{ .Site.Params.consultation.url }}">{{ .Site.Params.consultation.title }}</a>
-            </li>
-            <li>
-              <a class="font-semibold text-sm sm:text-xl lg:text-sm leading-100 text-dark-black lg:text-white uppercase py-4 px-8 lg:py-1.5 lg:px-2.5 hover:bg-dark-black hover:text-white lg:hover:bg-white hover:bg-dark-black hover:text-white lg:hover:text-dark-black rounded-full transition-all duration-300 ease-linear"
-                href="/kontakt/">Kontakt</a>
-            </li>
+            {{ end }}
           </ul>
         </div>
       </nav>
